# ClipWise

./: .dockerignore  .env.example  .gitignore  README.md  package.json  railway.json  render.yaml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_pipeline.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  clip.py  user.py  video.py
backend/app/routers/: __init__.py  auth.py  clips.py  payments.py  videos.py
backend/app/services/: __init__.py  auth_service.py  clip_service.py  video_service.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py  video_renderer.py
database/: schema.sql
frontend/: Dockerfile  README.md  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/billing/: page.tsx
frontend/src/components/dashboard/: notifications.tsx  sidebar.tsx  stats-card.tsx  topbar.tsx  upload-zone.tsx  user-nav.tsx  video-card.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  sidebar.tsx
frontend/src/components/shared/: clip-card.tsx  video-card.tsx
frontend/src/hooks/: use-auth.ts  use-auth.tsx  use-videos.ts
frontend/src/lib/: api.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/types/: index.ts
(+5 files in other folders)
