[project]
name = "clipwise-backend"
version = "0.1.0"
description = "ClipWise — AI-Powered Video Repurposer API"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
